# svg-png-tiler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  base64.cpp  base64.h  build.sh  bundle-with-wasm.js  client.js  cmake-variants.yaml  compile_commands.json  index.html  main.cpp  package-lock.json  package.json  pngtiler.cpp  pngtiler.h  svg-png-tiler.d.ts  svg-png-tiler.js  svg-png-tiler.wasm  svg2png.all.js  svg2png.js  svg2png.wasm  svg2png.wasm.map
.github/workflows/: main.yml
example/: client.js  compile_commands.json  index.html
lodepng/: lodepng.cpp  lodepng.h
rapidxml/: rapidxml_print.hpp
src/: .clang-format  main.cpp  pngtiler.cpp  pngtiler.h  pre.js
tests/: test.js
